@ refactor: make restClient final, rename getClientUtil to getRestClient
Co-Authored-By: Claude <noreply@anthropic.com>
@